--- a/2-homework/res/CSS/external_leg_dark.css
+++ b/2-homework/res/CSS/external_leg_dark.css
@@ -3,8 +3,8 @@ html{
 }
 
 body{
-    background-color: black;
-    color: white;
+    background-color: #1a1a1a;
+    color: #ffffff;
 }
 
 .titolo{
